<resources>
    <string name="app_name">PopularMovies</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_rating">Sort by Rating</string>
    <string name="overview_plot">Plot synopsis : \n\n</string>
    <string name="release_date">Release date :\t </string>
    <string name="user_score">User score :\t </string>
    <string name="about">About</string>
    <string name="author">says : </string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="mark_as_favorite">Mark as Favorite</string>
    <string name="view_favorites">View Favorites</string>
</resources>
