<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:scrollbarStyle="outsideOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/original_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/poster"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/original_title" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/poster"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/original_title"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/markFavorite"
                android:text="@string/mark_as_favorite"
                android:background="@color/favoriteBtn"
                android:textStyle="bold"
                android:layout_below="@+id/score"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/overview"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/trailerHeader"
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/release_date">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/trailerLogo"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />
                    <TextView
                        android:text="@string/trailers"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <ListView
                    android:id="@+id/trailers_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">
                </ListView>
                <LinearLayout
                    android:layout_marginTop="70dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/review_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />
                    <TextView
                        android:id="@+id/reviews_title"
                        android:text="@string/reviews"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
